--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,10 @@ a:hover {
   color: #535bf2;
 }
 
-
+.pv-toolbar-azul {
+  background-color: #1876d3 !important;
+  color: #fff;
+}
 
 button:focus,
 button:focus-visible {
